added tutorial section, updated css, updated footer text

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ general_email: rndparr@gmail.com
 academic_email: randy.parrish@emory.edu
 
 description: > # this means to ignore newlines until "baseurl:"
-  Biostatistics MSPH student and research assistant at Emory University.
+  Research specialist at Emory University.
 
 
 
