--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Randy Parrish
-general_email: rndparr@gmail.com
+general_email: somebodyparr@gmail.com
 academic_email: randy.parrish@emory.edu
 
 description: > # this means to ignore newlines until "baseurl:"
-  Research specialist at Emory University.
+  Biostatistics PhD student at Emory University.
 
 
 
